# SimpleMemoryAllocator

./: .gitignore  CMakeLists.txt  DebugLib.c  DebugLib.h  LICENSE  Makefile  MemoryAllocator.c  MemoryAllocator.cpp  MemoryAllocator.h  MemoryAllocator.hpp  README.md  WinBuild.cmd  main.cpp
